apps/obsidian-livesync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian-livesync-couchdb
  namespace: obsidian-livesync
  labels:
    app.kubernetes.io/name: obsidian-livesync
    app.kubernetes.io/component: couchdb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: obsidian-livesync
    app.kubernetes.io/component: couchdb
  ports:
    - name: http
      port: 5984
      targetPort: http
